[gd_scene load_steps=2 format=3 uid="uid://dhr36f7nqme2b"]

[ext_resource type="Script" path="res://game_files/wrsm/world_camera/WorldCamera.gd" id="1_d83fw"]

[node name="WorldCamera" type="Camera2D"]
process_mode = 3
current = true
script = ExtResource("1_d83fw")

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
